added finished assignment including 2 pages that change the link lis in response to the arrow being clicked wasnt sure hoe many of the syle we were supposed to add so i did only 2 extra pages worth

--- a/page2.html
+++ b/page2.html
@@ -156,36 +156,36 @@
 					<nav role="navigation">
 						<ul>
 							<li>
-								<a href="http://www.csszengarden.com/221/" class="design-name">Mid Century Modern</a> by <a
-									href="http://www.csszengarden.com/221/" class="designer-name">Andrew Lohman</a>
+								<a href="http://www.csszengarden.com/213/" class="design-name">Under The Sea</a> by <a
+									href="http://www.ericstoltz.com/"class="designer-name">Eric Stoltz</a>
 							</li>
 							<li>
-								<a href="/220/" class="design-name">Garments</a> by <a href="http://danielmall.com/"
-									class="designer-name">Dan Mall</a>
+								<a href="http://www.csszengarden.com/212/" class="design-name">Make 'EM Proud</a> by <a href="http://skybased.com/"
+									class="designer-name">Michael McAghon and Scotty Reifsnyderl</a>
 							</li>
 							<li>
-								<a href="http://www.csszengarden.com/220/" class="design-name">Steel</a> by <a href="http://steffen-knoeller.de"
-									class="designer-name">Steffen Knoeller</a>
+								<a href="http://www.csszengarden.com/211/" class="design-name">Orchid Beauty</a> by <a href="http://www.csszengarden.com/211/"
+									class="designer-name">Kevin Addison</a>
 							</li>
 							<li>
-								<a href="http://www.csszengarden.com/218/" class="design-name">Apothecary</a> by <a href="http://trentwalton.com"
-									class="designer-name">Trent Walton</a>
+								<a href="http://www.csszengarden.com/210/" class="design-name">Oceanscape</a> by <a href="http://www.csszengarden.com/210/"
+									class="designer-name">Justin Gray</a>
 							</li>
 							<li>
-								<a href="http://www.csszengarden.com/217/" class="design-name">Screen Filler</a> by <a
-									href="http://elliotjaystocks.com/" class="designer-name">Elliot Jay Stocks</a>
+								<a href="http://www.csszengarden.com/209/" class="design-name">Css CO, LTD</a> by <a
+									href="http://www.csszengarden.com/209/" class="designer-name">Benjammin Klemm</a>
 							</li>
 							<li>
-								<a href="http://www.csszengarden.com/216/" class="design-name">Fountain Kiss</a> by <a
-									href="http://jeremycarlson.com" class="designer-name">Jeremy Carlson</a>
+								<a href="http://www.csszengarden.com/208/" class="design-name">Sakura</a> by <a
+									href="page2.html" class="designer-name">Tatsuya Uchida</a>
 							</li>
 							<li>
-								<a href="http://www.csszengarden.com/215/" class="design-name">A Robot Named Jimmy</a> by <a
-									href="http://meltmedia.com/" class="designer-name">meltmedia</a>
+								<a href="http://www.csszengarden.com/206/" class="design-name">A walk in the Garden</a> by <a
+									href="http://users.skynet.be/bk316398/temp.html" class="designer-name">Simon Van Hauwermeiren</a>
 							</li>
 							<li>
-								<a href="http://www.csszengarden.com/214/" class="design-name">Verde Moderna</a> by <a
-									href="http://www.mezzoblue.com/" class="designer-name">Dave Shea</a>
+								<a href="http://www.csszengarden.com/207/" class="design-name">Kyoto Forest</a> by <a
+									href="http://rpmdesignfactory.com/" class="designer-name">John Politowski</a>
 							</li>
 						</ul>
 					</nav>
@@ -196,10 +196,11 @@
 					<nav role="navigation">
 						<ul>
 							<li class="next">
-								<a href="page2.html">
-									Next Designs <span class="indicator">&rsaquo;</span>
+								<a href="page3.html">
+									Next Designs <span class="indicator">rsaquo;</span>
 								</a>
 							</li>
+                            </li>
 							<li class="viewall">
 								<a href="http://www.mezzoblue.com/zengarden/alldesigns/"
 									title="View every submission to the Zen Garden.">
@@ -214,7 +215,7 @@
 					<ul>
 						<li class="view-css">
 							<a href="/214/214.css" title="View the source CSS file of the currently-viewed design.">
-								View This Designs <abbr title="Cascading Style Sheets">CSS</abbr> </a>
+								View This Design&#8217;s <abbr title="Cascading Style Sheets">CSS</abbr> </a>
 						</li>
 						<li class="css-resources">
 							<a href="http://www.mezzoblue.com/zengarden/resources/"
