--- a/page3.html
+++ b/page3.html
@@ -28,7 +28,7 @@
 				<h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
 			</header>
 
-			<div class="summary" id="zen-summary" role="article">
+			<div class="summary"  role="article">
 				<p>A demonstration of what can be accomplished through <abbr
 						title="Cascading Style Sheets">CSS</abbr>-based design. Select any style sheet from the list to
 					load it into this page.</p>
@@ -38,7 +38,7 @@
 				</p>
 			</div>
 
-			<div class="preamble" id="zen-preamble" role="article">
+			<div class="preamble"  role="article">
 				<h3>The Road to Enlightenment</h3>
 				<p>Littering a dark and dreary road lay the past relics of browser-specific tags, incompatible <abbr
 						title="Document Object Model">DOM</abbr>s, broken <abbr
@@ -52,7 +52,7 @@
 			</div>
 		</section>
 
-		<div class="main supporting" id="zen-supporting" role="main">
+		<div class="main supporting"  role="main">
 			<div class="explanation" id="zen-explanation" role="article">
 				<h3>So What is This About?</h3>
 				<p>There is a continuing need to show the power of <abbr title="Cascading Style Sheets">CSS</abbr>. The
@@ -67,7 +67,7 @@
 					always push it further.</p>
 			</div>
 
-			<div class="participation" id="zen-participation" role="article">
+			<div class="participation"  role="article">
 				<h3>Participation</h3>
 				<p>Strong visual design has always been our focus. You are modifying this page, so strong <abbr
 						title="Cascading Style Sheets">CSS</abbr> skills are necessary too, but the example files are
@@ -91,7 +91,7 @@
 					server.</p>
 			</div>
 
-			<div class="benefits" id="zen-benefits" role="article">
+			<div class="benefits"  role="article">
 				<h3>Benefits</h3>
 				<p>Why participate? For recognition, inspiration, and a resource we can all refer to showing people how
 					amazing <abbr title="Cascading Style Sheets">CSS</abbr> really can be. This site serves as equal
@@ -99,7 +99,7 @@
 					and gallery of future techniques we can all look forward to.</p>
 			</div>
 
-			<div class="requirements" id="zen-requirements" role="article">
+			<div class="requirements"  role="article">
 				<h3>Requirements</h3>
 				<p>Where possible, we would like to see mostly <abbr title="Cascading Style Sheets, levels 1 and 2">CSS
 						1 &amp; 2</abbr> usage. <abbr title="Cascading Style Sheets, levels 3 and 4">CSS 3 &amp;
@@ -156,36 +156,36 @@
 					<nav role="navigation">
 						<ul>
 							<li>
-								<a href="http://www.csszengarden.com/221/" class="design-name">Mid Century Modern</a> by <a
-									href="http://www.csszengarden.com/221/" class="designer-name">Andrew Lohman</a>
+								<a href="http://www.csszengarden.com/205/" class="design-name">Spring360</a> by <a
+									href="http://www.medialab360.com/" class="designer-name">Rene Hornig</a>
 							</li>
 							<li>
-								<a href="/220/" class="design-name">Garments</a> by <a href="http://danielmall.com/"
-									class="designer-name">Dan Mall</a>
+								<a href="http://www.csszengarden.com/204/" class="design-name">Withering Beauty</a> by <a href="http://www.wduffy.co.uk/"
+									class="designer-name">William Duffy</a>
 							</li>
 							<li>
-								<a href="http://www.csszengarden.com/220/" class="design-name">Steel</a> by <a href="http://steffen-knoeller.de"
-									class="designer-name">Steffen Knoeller</a>
+								<a href="http://www.csszengarden.com/203/" class="design-name">Tiny Blue</a> by <a href="http://www.timovirtanen.com/"
+									class="designer-name">Timo Virtanen</a>
 							</li>
 							<li>
-								<a href="http://www.csszengarden.com/218/" class="design-name">Apothecary</a> by <a href="http://trentwalton.com"
-									class="designer-name">Trent Walton</a>
+								<a href="http://www.csszengarden.com/202/" class="design-name">RETRO THEATER</a> by <a href="http://www.csszengarden.com/214/page2/#"
+									class="designer-name">Eric Rogé</a>
 							</li>
 							<li>
-								<a href="http://www.csszengarden.com/217/" class="design-name">Screen Filler</a> by <a
-									href="http://elliotjaystocks.com/" class="designer-name">Elliot Jay Stocks</a>
+								<a href="http://www.csszengarden.com/201/" class="design-name">LILY POND</a> by <a
+									href="http://www.csszengarden.com/214/page2/#" class="designer-name">Rose Thorogood</a>
 							</li>
 							<li>
-								<a href="http://www.csszengarden.com/216/" class="design-name">Fountain Kiss</a> by <a
-									href="http://jeremycarlson.com" class="designer-name">Jeremy Carlson</a>
+								<a href="http://www.csszengarden.com/200/" class="design-name">ICICLE OUTBACK</a> by <a
+									href="http://www.timovirtanen.com/" class="designer-name">Timo Virtanen</a>
 							</li>
 							<li>
-								<a href="http://www.csszengarden.com/215/" class="design-name">A Robot Named Jimmy</a> by <a
-									href="http://meltmedia.com/" class="designer-name">meltmedia</a>
+								<a href="http://www.csszengarden.com/199/" class="design-name">CSS ZEN ARMY</a> by <a
+									href="http://www.niceguy.com/" class="designer-name">Carl Desmond</a>
 							</li>
 							<li>
-								<a href="http://www.csszengarden.com/214/" class="design-name">Verde Moderna</a> by <a
-									href="http://www.mezzoblue.com/" class="designer-name">Dave Shea</a>
+								<a href="http://www.csszengarden.com/198/" class="design-name">The Original</a> by <a
+									href="http://www.csszengarden.com/214/page2/#" class="designer-name">Joachim Shotter</a>
 							</li>
 						</ul>
 					</nav>
@@ -196,7 +196,7 @@
 					<nav role="navigation">
 						<ul>
 							<li class="next">
-								<a href="page2.html">
+								<a href="index.html">
 									Next Designs <span class="indicator">&rsaquo;</span>
 								</a>
 							</li>
@@ -241,12 +241,6 @@
 		</aside>
 	</div>
 
-	<div class="extra1" role="presentation"></div>
-	<div class="extra2" role="presentation"></div>
-	<div class="extra3" role="presentation"></div>
-	<div class="extra4" role="presentation"></div>
-	<div class="extra5" role="presentation"></div>
-	<div class="extra6" role="presentation"></div>
 
 </body>
 
