--- a/page3.html
+++ b/page3.html
@@ -209,7 +209,7 @@
 					</nav>
 				</div>
 
-				<div class="zenRecs" id="zen-resources">
+				<div class="zen-resources" id="zen-resources">
 					<h3 class="resources">Resources:</h3>
 					<ul>
 						<li class="view-css">
