--- a/page3.html
+++ b/page3.html
@@ -20,7 +20,7 @@
 
 
 <body id="css-zen-garden">
-	<div class="page-wrapper">
+	<div class="theGarden">
 
 		<section class="intro" id="zen-intro">
 			<header role="banner">
